--- a/client/package.json
+++ b/client/package.json
@@ -9,17 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.8.1",
+    "axios": "^1.3.4",
+    "@heroicons/react": "^2.0.16"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.0.3",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.1.0",
     "tailwindcss": "^3.2.7",
-    "vite": "^7.1.6"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21"
   }
 }
