Enhanced UI and Complete all the Remaining Tasks

--- a/.env
+++ b/.env
@@ -2,8 +2,11 @@
 PORT=5000
 NODE_ENV=development
 
-# Database
+# Database (Local)
 MONGODB_URI=mongodb://localhost:27017/restaurant-app
+
+# Database (Atlas - Replace with your connection string)
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/restaurant-app
 
 # Client
 CLIENT_URL=http://localhost:3000
